samples/_failures_safe/1761137760_79377a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_87c771cf.c: In function ‘main’:
./samples/SAFE/__tmp_87c771cf.c:146:17: error: expected expression at end of input
  146 |                 if (matrix_add(&
      |                 ^~
./samples/SAFE/__tmp_87c771cf.c:146:21: error: too few arguments to function ‘matrix_add’
  146 |                 if (matrix_add(&
      |                     ^~~~~~~~~~
./samples/SAFE/__tmp_87c771cf.c:89:5: note: declared here
   89 | int matrix_add(const Matrix* a, const Matrix* b, Matrix* result) {
      |     ^~~~~~~~~~
./samples/SAFE/__tmp_87c771cf.c:146:17: error: expected declaration or statement at end of input
  146 |                 if (matrix_add(&
      |                 ^~
./samples/SAFE/__tmp_87c771cf.c:146:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_87c771cf.c:146:17: error: expected declaration or statement at end of input
